Home work#4 add task for run javaApplication from gradle